# better-card-game

./: ANIMATION_IMPLEMENTATION_PLAN.md  CLAUDE.md  GAME_RULES.md  TODO.md  package.json
.claude/: testing-methodology.md
.claude/skills/balance-monster-stats/: SKILL.md
.github/workflows/: rust.yml
back/: Cargo.toml
back/src/: error.rs  lib.rs  main.rs
back/src/collection/: common.rs  demon.rs  dragon.rs  human.rs  mod.rs  types.rs
back/src/game/: action.rs  card.rs  effects.rs  events.rs  logic.rs  mod.rs  player.rs  types.rs  utils.rs  view.rs
back/src/game/logic/: mod.rs  passiv_boost.rs  summon.rs
back/src/game/tests/: mod.rs  test_attack.rs  test_attack_validation.rs  test_auto_draw.rs  test_boost.rs  test_deal_damage.rs  test_destroy.rs  test_end_turn.rs  test_heal.rs  test_increase_max_mana.rs  test_keywords.rs  test_make_draw.rs  test_move.rs  test_play_monster.rs  test_play_spell.rs  test_public_game_state.rs  test_refresh_mana.rs  test_summon_from_hand.rs  test_utils.rs  test_win_conditions.rs
back/src/game/user_actions/: mod.rs  play_monster.rs  play_spell.rs
back/src/ia/: attack.rs  mod.rs  summon.rs
back/src/server/: handle_game.rs  handle_matchmaking.rs  initialize.rs  mod.rs
back/src/template/: mod.rs
front/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  game.service.ts  routeTree.gen.ts
front/src/components/: Card.tsx  DeckSummary.module.css  DeckSummary.tsx  DragAndDrop.module.css  DragAndDrop.tsx  Field.tsx  Hud.tsx  PlayerBoard.tsx
front/src/css/: Animation.css  App.css  (+5 more)
(+59 files in other folders)
