[package]
name = "back"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "back"
path = "src/main.rs"

[lib]
name = "back"
path = "src/lib.rs"

[dependencies]
axum = "0.8.6"
axum-macros = "0.5.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
