[package]
name = "back"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "back"
path = "src/main.rs"

[lib]
name = "back"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.6", features = ["ws"]}
axum-macros = "0.5.0"
dashmap = "6.1.0"
futures = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
